--- a/preamble.tex
+++ b/preamble.tex
@@ -177,6 +177,7 @@ vlined]{algorithm2e}
 \newcommand{\ZZ}{\mathbb{Z}}
 \newcommand{\QQ}{\mathbb{Q}}
 \newcommand{\NN}{\mathbb{N}}
+\newcommand{\ZZpos}{\ZZ_{>0}}
 \renewcommand{\emptyset}{\varnothing}
 
 %rings
@@ -193,6 +194,7 @@ vlined]{algorithm2e}
 \newcommand{\matI}{\mathbf{I}}
 
 \newcommand{\numvars}{m}
+\newcommand{\setW}{\mathsf{W}}
 
 %inequalities
 \renewcommand{\geq}{\geqslant}
