--- a/aip.tex
+++ b/aip.tex
@@ -2944,6 +2944,8 @@ Finally, the minimality of $\mathcal{L} = \mf(\matA, \vv{u})$ implies that $\mat
    Then $(\matA,\vv{v})$ is small by \Cref{trivial small value bound: P}.
    If this pair is not very small, then $\vv{v} \ge \vv{u}$ for some $\vv{u} \in \setW^*$, and $\crit(\matA,\vv{v},p) = \crit(\matA,\vv{u},p) = 1$, by \Cref{small not very small value: T}.
    Suppose now that $(\matA,\vv{v})$ is very small, and let $\O = \mf(\matA,\vv{v})$.
+   If $\O$ is bounded, then $\vv{v}$ itself is in $\setW_\O$.
+   If $\O$ is unbounded\ldots
    \todo[inline]{TBC}
 \end{proof}
 
