--- a/aip.tex
+++ b/aip.tex
@@ -2843,16 +2843,13 @@ Then for each such $i$, $\epsilon_{p^i}(\matA,\vv{u}) = \delta_{p^i}(\matA,\vv{u
 \begin{proof}
    We will prove that if $\rb(\O) \subseteq \rb(\mathcal{L})$, then $\O =\mathcal{L}$.
    Assume that $\rb(\mathcal{O})$ lies in $\rb(\mathcal{L})$, fix a point $\vv{c}$ defining $\O$ in $\N$, and set $\lambda = \ft{\matA}{\vv{u}}$.
-   Then $\lambda^{-1} \vv{u} \in \mathcal{L}$, and so 
-\begin{equation}
-\label{cansado: e} \lambda^{-1} \vv{w} = \lambda^{-1} \collapse{\vv{u}} \in \collapse{\mathcal{L}}.
-\end{equation}
-Since $\collapse{\mathcal{L}}$ is a face of $\collapse{\N}$ by \Cref{collapse of Newton polyhedron: P}, and $\lambda = \ft{\collapse{\matA}}{\vv{w}}$ by \Cref{collapse of mf and mc: P}, the minimality of $\collapse{\O} = \mf(\collapse{\matA}, \vv{w})$ implies $\collapse{\O} \subseteq \collapse{\mathcal{L}}$, and invoking \Cref{collapse of Newton polyhedron: P} again we conclude that $\O \subseteq \mathcal{L}$.
+   Then $\lambda^{-1} \vv{u} \in \mathcal{L}$, and so $\lambda^{-1} \vv{w} = \lambda^{-1} \collapse{\vv{u}} \in \collapse{\mathcal{L}}$.
+   Since $\collapse{\mathcal{L}}$ is a face of $\collapse{\N}$ by \Cref{collapse of Newton polyhedron: P}, and $\lambda = \ft{\collapse{\matA}}{\vv{w}}$ by \Cref{collapse of mf and mc: P}, the minimality of $\collapse{\O} = \mf(\collapse{\matA}, \vv{w})$ implies $\collapse{\O} \subseteq \collapse{\mathcal{L}}$, and invoking \Cref{collapse of Newton polyhedron: P} again we conclude that $\O \subseteq \mathcal{L}$.
 
-On the other hand, we have 
-\[ \lambda = \ft{\collapse{\matA}}{\vv{w}} = \iprod{\collapse{\vv{c}}}{\vv{w}} = \iprod{\vv{c}}{\vv{u}} \] 
-and as $\lambda^{-1} \vv{u} \in \mathcal{L} \subseteq \N$, the identity $\lambda = \iprod{\vv{c}}{\vv{u}}$ implies that $\lambda^{-1} \vv{u} \in \O$.
-Finally, the minimality of $\mathcal{L} = \mf(\matA, \vv{u})$ implies that $\mathcal{L} \subseteq \O$.
+   On the other hand, we have 
+   \[ \lambda = \ft{\collapse{\matA}}{\vv{w}} = \iprod{\collapse{\vv{c}}}{\vv{w}} = \iprod{\vv{c}}{\vv{u}} \]
+   and as $\lambda^{-1} \vv{u} \in \mathcal{L} \subseteq \N$, the identity $\lambda = \iprod{\vv{c}}{\vv{u}}$ implies that $\lambda^{-1} \vv{u} \in \O$.
+   Finally, the minimality of $\mathcal{L} = \mf(\matA, \vv{u})$ implies that $\mathcal{L} \subseteq \O$.
 \end{proof}
 
 % \begin{lemma}
@@ -2908,18 +2905,18 @@ Finally, the minimality of $\mathcal{L} = \mf(\matA, \vv{u})$ implies that $\mat
    
    If $\O$ is a \emph{bounded} standard face of $\N$, set
    \[\setW_\O = \{\vv{u} \in \ZZpos^\numvars : (\matA,\vv{u})\text{ is very small and }\mf(\matA,\vv{u}) = \O\}.\]
-   Observe that if $\vv{u} \in \setW$, then $\lambda \coloneqq \ft{\matA}{\vv{u}} \le 1$ and $\lambda^{-1} \vv{u}\in \O$, and consequently $\vv{u}$ lies in the convex hull of $\O \cup \{\vv{0}\}$.
+   Observe that if $\vv{u} \in \setW_\O$, then $\lambda \coloneqq \ft{\matA}{\vv{u}} \le 1$ and $\lambda^{-1} \vv{u}\in \O$, and consequently $\vv{u}$ lies in the convex hull of $\O \cup \{\vv{0}\}$.
    Since $\O$ is bounded, so is this convex hull, and consequently the set $\setW_\O$ is finite.
    \pedro[inline]{
       I believe $\setW_\O = (\ri \O \cup \ri \conv(\O\cup \{\vv{0}\})) \cap \ZZpos^\numvars$, but we don't need this level of precision here.
    }
    
-   If $\O$ is an unbounded standard face of $\N$, the set of all positive points $\vv{u}$ such that $(\matA,\vv{u})$ is very small and $\mf(\matA,\vv{u}) = \O$ may be infinite, so we need to be more selective, and settle for a finite subset of ``representatives''.
+   If $\O$ is an unbounded standard face of $\N$, the set of all positive points $\vv{u}$ such that $(\matA,\vv{u})$ is very small and $\mf(\matA,\vv{u}) = \O$ may be infinite, so we need to be more selective, and settle for a finite subset of ``minimal representatives''.
    Denoting collapsing along $\O$ by an overbar, $\collapse{\O}$ is a bounded standard face of $\collapse{\N}$ by \Cref{collapse of Newton polyhedron: P}, and we construct a finite set $\setW_{\collapse{\O}}$ of positive points in the target lattice of $\collapse{\matA}$ as in the previous paragraph.
    For each point $\vv{w}$ in $\setW_{\collapse{\O}}$, let
    \[ S_\vv{w} = \{ \vv{u} \in \ZZpos^\numvars: \collapse{\vv{u}} = \vv{w}\text{ and }\mf(\matA,\vv{u}) = \O \}.\]
    Note that if $\vv{u} \in S_\vv{w}$, then $(\matA,\vv{u})$ is very small, since $\ft{\matA}{\vv{u}} = \ft{\collapse{\matA}}{\vv{w}}$ by \Cref{collapse of mf and mc: P} and $(\collapse{\matA},\vv{w})$ is very small by construction.
-   \Cref{lem: lifting pairs 2} tells us that $S_\vv{w}$ is nonempty, and Dickson's Lemma \todo{Add reference} tells us that the set $\min S_\vv{w}$  of minimal elements of $S_\vv{w}$ under componentwise inequality is finite.
+   \Cref{lem: lifting pairs 2} tells us that $S_\vv{w}$ is nonempty, and Dickson's Lemma \cite[Lemma~A]{dickson} tells us that the set $\min S_\vv{w}$  of minimal elements of $S_\vv{w}$ under componentwise inequality is finite.
    Set
    \[\setW_\O = \bigcup_{\vv{w}} \min S_\vv{w} \]
    where the union ranges over all $\vv{w} \in \setW_{\collapse{\O}}$.
@@ -2935,12 +2932,9 @@ Finally, the minimality of $\mathcal{L} = \mf(\matA, \vv{u})$ implies that $\mat
    Fix an integer $\beta$ for which the conclusions of both \Cref{small not very small value: T,value-of-aip-invariant-under-collapse: C} hold for all $p > \beta$, and fix $p>\beta$.
 
    Claim $(1)$ follows from \Cref{trivial small value bound: P}, as $(\matA,\vv{u})$ is small for every $\vv{u} \in \setW$.
-   % This is clear by construction whenever $\vv{u}$ lies in $\setW^*$ or $\setW_\O$ for some bounded face $\O$.
-   % If $\vv{u} \in \setW_\O$ for some unbounded face $\O$, on the other hand, then $(\collapse{\matA},\collapse{\vv{u}})$ is very small, again by construction, where overbars indicate collapsing along $\O$.
-   % Since $\ft{\matA}{\vv{u}} = \ft{\collapse{\matA}}{\collapse{\vv{u}}}$ by \Cref{collapse of mf and mc: P},  $(\matA,\vv{u})$ is very small as well.
    Toward $(2)$, let $\vv{v}$ be a positive point such that $\crit(\matA,\vv{v},p) \le 1$.
    Then $(\matA,\vv{v})$ is small by \Cref{trivial small value bound: P}.
-   If this pair is not very small, then $\vv{v} \ge \vv{u}$ for some $\vv{u} \in \setW^*$, and $\crit(\matA,\vv{v},p) = \crit(\matA,\vv{u},p) = 1$, by \Cref{small not very small value: T}.
+   If this pair is not very small, then $\vv{v} \ge \vv{u}$ for some $\vv{u} \in \setW^*$, and $\crit(\matA,\vv{v},p) = \crit(\matA,\vv{u},p) = 1$ by \Cref{small not very small value: T}.
    Suppose now that $(\matA,\vv{v})$ is very small, and let $\O = \mf(\matA,\vv{v})$.
    If $\O$ is bounded, then $\vv{v}$ itself is in $\setW_\O$, and we are done.
    If $\O$ is unbounded, then, again indicating collapsing along $\O$ by overbars, \Cref{collapse of mf and mc: P} shows that the pair $(\collapse{\matA},\collapse{\vv{v}})$ is very small, since $\ft{\collapse{\matA}}{\collapse{\vv{v}}} = \ft{\matA}{\vv{v}} \le 1$, and that $\mf(\collapse{\matA},\collapse{\vv{v}}) = \collapse{\O}$.
@@ -2950,7 +2944,7 @@ Finally, the minimality of $\mathcal{L} = \mf(\matA, \vv{u})$ implies that $\mat
 
 \begin{remark}[On the computability of $\setW$]
    Retaining the notation introduced in the proof of \Cref{finite-representatives-small-crits: P}, when considering the bounded faces in the computation of $\setW$, we may consider only the bounded standard faces $\L$ that are \emph{maximal} with respect to inclusion, and take the set of all positive lattice points in the convex hull of $\L\cup \{\vv{0}\}$.
-   This set is computable (\eg using the package \emph{Polyhedra} \todo{Add reference} of \emph{Macaulay2} \cite{M2}), 
+   This set is computable (\eg using the package \emph{Polyhedra} for \emph{Macaulay2} \cite{PolyhedraSource,M2}), 
    and coincides with the (disjoint) union of the sets $\setW_\O$, where $\O$ ranges over all standard faces of $\N$ contained in $\L$.
    \details[inline]{
       \pedro[inline]{
