--- a/aip.tex
+++ b/aip.tex
@@ -2904,28 +2904,28 @@ Then for each such $i$, $\epsilon_{p^i}(\matA,\vv{u}) = \delta_{p^i}(\matA,\vv{u
    For concreteness, suppose $\matA$ has $\numvars$ rows.
    
    If $\O$ is a \emph{bounded} standard face of $\N$, set
-   \[\setW_\O = \{\vv{u} \in \ZZpos^\numvars : (\matA,\vv{u})\text{ is very small and }\mf(\matA,\vv{u}) = \O\}.\]
+   \[\setW_\O \coloneqq \{\vv{u} \in \ZZpos^\numvars : (\matA,\vv{u})\text{ is very small and }\mf(\matA,\vv{u}) = \O\}.\]
    Observe that if $\vv{u} \in \setW_\O$, then $\lambda \coloneqq \ft{\matA}{\vv{u}} \le 1$ and $\lambda^{-1} \vv{u}\in \O$, and consequently $\vv{u}$ lies in the convex hull of $\O \cup \{\vv{0}\}$.
    Since $\O$ is bounded, so is this convex hull, and consequently the set $\setW_\O$ is finite.
    \pedro[inline]{
       I believe $\setW_\O = (\ri \O \cup \ri \conv(\O\cup \{\vv{0}\})) \cap \ZZpos^\numvars$, but we don't need this level of precision here.
    }
    
-   If $\O$ is an unbounded standard face of $\N$, the set of all positive points $\vv{u}$ such that $(\matA,\vv{u})$ is very small and $\mf(\matA,\vv{u}) = \O$ may be infinite, so we need to be more selective, and settle for a finite subset of ``minimal representatives''.
+   If $\O$ is an unbounded standard face of $\N$, the set of all positive points $\vv{u}$ such that $(\matA,\vv{u})$ is very small and $\mf(\matA,\vv{u}) = \O$ is infinite, so we need to be more selective, and settle for a finite subset of ``minimal representatives''.
    Denoting collapsing along $\O$ by an overbar, $\collapse{\O}$ is a bounded standard face of $\collapse{\N}$ by \Cref{collapse of Newton polyhedron: P}, and we construct a finite set $\setW_{\collapse{\O}}$ of positive points in the target lattice of $\collapse{\matA}$ as in the previous paragraph.
-   For each point $\vv{w}$ in $\setW_{\collapse{\O}}$, let
-   \[ S_\vv{w} = \{ \vv{u} \in \ZZpos^\numvars: \collapse{\vv{u}} = \vv{w}\text{ and }\mf(\matA,\vv{u}) = \O \}.\]
+   For each point $\vv{w}$ in $\setW_{\collapse{\O}}$, we set
+   \[ S_\vv{w} \coloneqq \{ \vv{u} \in \ZZpos^\numvars: \collapse{\vv{u}} = \vv{w}\text{ and }\mf(\matA,\vv{u}) = \O \}.\]
    Note that if $\vv{u} \in S_\vv{w}$, then $(\matA,\vv{u})$ is very small, since $\ft{\matA}{\vv{u}} = \ft{\collapse{\matA}}{\vv{w}}$ by \Cref{collapse of mf and mc: P} and $(\collapse{\matA},\vv{w})$ is very small by construction.
    \Cref{lem: lifting pairs 2} tells us that $S_\vv{w}$ is nonempty, and Dickson's Lemma \cite[Lemma~A]{dickson} tells us that the set $\min S_\vv{w}$  of minimal elements of $S_\vv{w}$ under componentwise inequality is finite.
    Set
-   \[\setW_\O = \bigcup_{\vv{w}} \min S_\vv{w} \]
+   \[\setW_\O \coloneqq \bigcup_{\vv{w}} \min S_\vv{w} \]
    where the union ranges over all $\vv{w} \in \setW_{\collapse{\O}}$.
 
    To conclude the construction of $\setW$, set 
-   \[\setW^* = \min\{\vv{u} \in \ZZpos^\numvars : (\matA,\vv{u})\text{ is small but not very small}\}\]
+   \[\setW^* \coloneqq \min\{\vv{u} \in \ZZpos^\numvars : (\matA,\vv{u})\text{ is small but not very small}\}\]
    where `$\min$' is again used to denote the set of all minimal elements of a set under componentwise inequality.
    This set is finite, again by Dickson's Lemma, and we set
-   \[\setW = \setW^* \cup \bigg(\bigcup_\O \setW_\O\bigg)\]
+   \[\setW \coloneqq \setW^* \cup \bigg(\bigcup_\O \setW_\O\bigg)\]
    where the union ranges over all standard faces $\O$ of $\N$.
 
    We now prove that the set $\setW$ just constructed does the job.
@@ -2936,7 +2936,7 @@ Then for each such $i$, $\epsilon_{p^i}(\matA,\vv{u}) = \delta_{p^i}(\matA,\vv{u
    Then $(\matA,\vv{v})$ is small by \Cref{trivial small value bound: P}.
    If this pair is not very small, then $\vv{v} \ge \vv{u}$ for some $\vv{u} \in \setW^*$, and $\crit(\matA,\vv{v},p) = \crit(\matA,\vv{u},p) = 1$ by \Cref{small not very small value: T}.
    Suppose now that $(\matA,\vv{v})$ is very small, and let $\O = \mf(\matA,\vv{v})$.
-   If $\O$ is bounded, then $\vv{v}$ itself is in $\setW_\O$, and we are done.
+   If $\O$ is bounded, then $\vv{v}$ itself is in $\setW_\O$, and we simply take $\vv{u} = \vv{v}$.
    If $\O$ is unbounded, then, again indicating collapsing along $\O$ by overbars, \Cref{collapse of mf and mc: P} shows that the pair $(\collapse{\matA},\collapse{\vv{v}})$ is very small, since $\ft{\collapse{\matA}}{\collapse{\vv{v}}} = \ft{\matA}{\vv{v}} \le 1$, and that $\mf(\collapse{\matA},\collapse{\vv{v}}) = \collapse{\O}$.
    Thus, $\collapse{\vv{v}} \in \setW_{\collapse{\O}}$, so that $\vv{v} \in S_{\collapse{\vv{v}}}$, and $\vv{v} \ge \vv{u}$ for some $\vv{u} \in \min S_{\collapse{\vv{v}}} \subseteq \setW_\O$.
    To conclude the proof, note that $\crit(\matA,\vv{v},p) = \crit(\collapse{\matA},\collapse{\vv{v}},p) = \crit(\matA,\vv{u},p)$ by \Cref{value-of-aip-invariant-under-collapse: C}.
@@ -2945,7 +2945,7 @@ Then for each such $i$, $\epsilon_{p^i}(\matA,\vv{u}) = \delta_{p^i}(\matA,\vv{u
 \begin{remark}[On the computability of $\setW$]
    Retaining the notation introduced in the proof of \Cref{finite-representatives-small-crits: P}, when considering the bounded faces in the computation of $\setW$, we may consider only the bounded standard faces $\L$ that are \emph{maximal} with respect to inclusion, and take the set of all positive lattice points in the convex hull of $\L\cup \{\vv{0}\}$.
    This set is computable (\eg using the package \emph{Polyhedra} for \emph{Macaulay2} \cite{PolyhedraSource,M2}), 
-   and coincides with the (disjoint) union of the sets $\setW_\O$, where $\O$ ranges over all standard faces of $\N$ contained in $\L$.
+   and coincides with the union of the sets $\setW_\O$, where $\O$ ranges over all standard faces of $\N$ contained in $\L$.
    \details[inline]{
       \pedro[inline]{
          Will write down all the details here, as I intend to use this in the M2 code, and want to make sure it's right.
