Fixed crits and ideals function

--- a/aip.tex
+++ b/aip.tex
@@ -1829,14 +1829,14 @@ It is clear from these interpretations that a very small pair must also be small
         $(\matA,\mathbin{\vcenter{\hbox{\scalebox{1.5}{$\bullet$}}}})$ is small (but not very small)\\[1mm]
         $(\matA,\textcolor{lightgray}{\mathbin{\vcenter{\hbox{\scalebox{1.5}{$\bullet$}}}}})$ is very small
       \end{tabular}                                                              
-      \caption{Small and very small pairs}
+      \caption{Small and very small pairs---a typical picture}
       \label{fig: small vs very small}
    \end{figure}
    \Cref{fig: small vs very small} shows the typical situation in two dimensions.
-   It shows the Newton polyhedron of a matrix $\matA$ with two rows, as well as the upper staircase determined by the columns of $\matA$.
+   It shows the Newton polyhedron of a matrix $\matA$ with two rows and four columns, as well as the upper staircase determined by the columns of $\matA$.
    If $\vv{u}$ is any of the gray points, the monomial pair $(\matA,\vv{u})$ is very small.
    If $\vv{u}$ is any of the black points, $(\matA,\vv{u})$ is small, but not very small.
-   Finally, if $\vv{u}$ is any of the white points, $(\matA,\vv{u})$ is neither small nor very small.
+   Finally, if $\vv{u}$ is any of the white points, $(\matA,\vv{u})$ is not small.
 
    It is interesting to notice that if we were to make this a three-dimensional example by adding a nonzero constant row to the matrix $\matA$, we would then have infinitely many ``layers'' looking exactly like \Cref{fig: small vs very small}, and consequently we would have infinitely many small but not very small pairs.
    Indeed, this behavior can occur for $\numvars \times n$ monomial matrices $\matA$ for which $m > 2$.
